2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/man/grub-set-default.h2m: Clarify that only saved default entry
	is modified

2010-10-29  BVK Chaitanya  <bvk.groups@gmail.com>

	NetBSD build fix for getline function conflict from gnulib.

	* Makefile.util.def (libgrubkern.a): New library for grub kernel
	components that depend on gnulib headers.
	(libgrubmods.a): Renamed from earlier libgrub.a.
	* conf/Makefile.common: Remove gnulib from *_LIBRARY flags.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Refuse to do a cross-disk embeddingless
	install rather than creating a broken install.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (argp): Remove misleading example of installing to
	a partition.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Clarify the error message.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_target_off_t): Removed no longer used type.

2010-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c
	(grub_make_system_path_relative_to_its_root)
	[HAVE_LIBZFS && HAVE_LIBNVPAIR]: Fix mountpoint return on ZFS.

2010-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c
	(grub_make_system_path_relative_to_its_root): Revert r2882.

2010-10-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_relocator_subchunk): Remove now
	useless field head. All users updated.
	(free_subchunk): Correct handling of IN_REGION subchunk.

2010-10-22  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Installing GRUB using grub-install): Proofread.
	(Supported kernels): Likewise.

2010-10-18  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Make mktemp invocations portable.

	* grub-core/genmod.sh.in: Use mktemp with an explicit template, and
	exit if mktemp fails.
	* tests/grub_script_blockarg.in: Likewise.